<resources>

    <string name="app_name">Quiz app</string>
    <string name="Q1">1.Former Australian captain Mark Taylor has had several nicknames over his playing career. Which of the following was NOT one of them?</string>
    <string name="q1a">Tubby</string>
    <string name="q1b">Stodge</string>
    <string name="Q1c">Helium Bat</string>
    <string name="Q1d">Stumpy</string>

    <string name="Q2">2.Which was the 1st non Test playing country to beat India in an international match?</string>
    <string name="Q2a">Canada</string>
    <string name="Q2b">Sri Lanka</string>
    <string name="Q2c">Zimbabwe</string>
    <string name="Q2d">East Africa</string>

    <string name="Q3">3.Track and field star Carl Lewis won how many gold medals at the 1984 Olympic games?</string>
    <string name="Q3a">Two</string>
    <string name="Q3b">Three</string>
    <string name="Q3c">Four</string>
    <string name="Q3d">Eight</string>

    <string name="Q4">4.Which county did Ravi Shastri play for?</string>
    <string name="Q4a">Glamorgan</string>
    <string name="Q4b">Leicestershire</string>
    <string name="Q4c">Gloucestershire</string>
    <string name="Q4d">Lancashire</string>

    <string name="Q5">5.Who was the first Indian to win the World Amateur Billiards title?</string>
    <string name="Q5a">Geet Sethi</string>
    <string name="Q5b">Wilson Jones</string>
    <string name="Q5c">Michael Ferreira</string>
    <string name="Q5d">Manoj Kothari</string>


</resources>


