<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context="com.project.surajhuljute.quizapp.MainActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            android:textSize="20sp"
            android:id="@+id/textView1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a"
                android:id="@+id/radioq1a"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1b"
                android:id="@+id/radioq1b"
                android:layout_alignTop="@+id/radioGroup"

                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1c"
                android:id="@+id/radioq1c"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1d"
                android:id="@+id/radioq1d"
                android:layout_marginLeft="54dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            android:textSize="20sp"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2a"
                android:id="@+id/radioq2a"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2b"
                android:id="@+id/radioq2b"
                android:layout_alignTop="@+id/radioGroup"

                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2c"
                android:id="@+id/radioq2c"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2d"
                android:id="@+id/radioq2d"
                android:layout_marginLeft="54dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            android:textSize="20sp"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup3">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3a"
                android:id="@+id/radioq3a"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3b"
                android:id="@+id/radioq3b"
                android:layout_alignTop="@+id/radioGroup"

                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3c"
                android:id="@+id/radioq3c"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3d"
                android:id="@+id/radioq3d"
                android:layout_marginLeft="54dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4"
            android:textSize="20sp"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup4">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4a"
                android:id="@+id/radioq4a"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4b"
                android:id="@+id/radioq4b"
                android:layout_alignTop="@+id/radioGroup"

                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4c"
                android:id="@+id/radioq4c"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4d"
                android:id="@+id/radioq4d"
                android:layout_marginLeft="54dp"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5"
            android:textSize="20sp"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5a"
                android:id="@+id/radioq5a"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5b"
                android:id="@+id/radioq5b"
                android:layout_alignTop="@+id/radioGroup"

                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5c"
                android:id="@+id/radioq5c"
                android:layout_marginLeft="54dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5d"
                android:id="@+id/radioq5d"
                android:layout_marginLeft="54dp"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT>"
            android:id="@+id/button"
            android:layout_centerHorizontal="true"
            android:onClick="show"

            />

    </LinearLayout>
</ScrollView>
